test/subjects/errors/constant_folding8.php
<?php
var_dump (~ true); // { phc-warning: Unsupported operand types }
?>
